# MoToBuddy

./: CMakeLists.txt  README.md
doc/: mosf.mosf
examples/: CMakeLists.txt
examples/quantum_gates/: CMakeLists.txt  ccx.mosf  h.mosf  quantum_gates.cpp  runtest
src/: CMakeLists.txt  bdd.h  bddio.c  bddop.c  cache.c  cache.h  cppext.cxx  kernel.c  kernel.h  mosf_parser.h  mtbdd.c  mtbdd.h  mtbdd_cache_registry.c  mtbdd_cache_registry.h  mtbddop.cxx  mtbddop.h  reorder.c  terminal.c  terminal.h
